<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="results">Results for</string>
    <string name="app_name">GreenPalate</string>
    <string name="history">History</string>
    <string name="searchview_hint">Insert a food category here</string>
    <string name="title_activity_barcode_result">Leanback BarcodeResultActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="carbohydrates_textview">Carbohydrates</string>
    <string name="fat_row_textview">Fat</string>
    <string name="protein_textview" >Protein</string>
    <string name="energy_textview" >Energy</string>
    <string name="saturated_fat_textview" >Saturated Fat</string>
    <string name="sodium_textview" >Sodium</string>
    <string name="salt_textview" >Salt</string>
    <string name="sugar_textview" >Sugar</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="barcodeResultsTitleString">Unknown</string>
    <string name="grams" translatable="false">g</string>
    <string name="no_connection_alert_title">No connection available</string>
    <string name="ok_string">Ok</string>
    <string name="no_connection_message">Check your internet connection, it\'s needed to fetch the food data</string>
</resources>