<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/barcode_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BarcodeResultsActivity">

    <ProgressBar
        android:id="@+id/barcode_results_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/barcode_results_transpartent_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#000000"
        android:visibility="gone"
        app:cardBackgroundColor="@color/lb_error_background_color_translucent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/barcodeActivityScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ecoscoreImageView"
                android:layout_width="57dp"
                android:layout_height="68dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="-8dp"
                app:layout_constraintBottom_toBottomOf="@+id/barcodeResultsTitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barcodeResultsTitleTextView"
                app:srcCompat="@drawable/eco_score_neutre" />

            <TextView
                android:id="@+id/barcodeResultsTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="4dp"
                android:text="@string/barcodeResultsTitleString"
                android:textSize="28sp"
                app:layout_constraintEnd_toStartOf="@+id/ecoscoreImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_nutriments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ecoscoreImageView"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:paddingStart="6dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TableRow

                            android:id="@+id/nutrimentsTable"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <!-- first element of the row-->


                            <TextView
                                android:id="@+id/nutrimentsTableTitle2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Nutritional Facts"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/ggg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:paddingStart="50dp"
                                android:text="100g"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/carbohydratesRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left">

                            <TextView
                                android:id="@+id/carbohydratesRowTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="4dp"
                                android:text="@string/carbohydrates_textview"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/carbValue"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/fatRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left">

                            <TextView
                                android:id="@+id/fatRowTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="4dp"
                                android:paddingRight="12dp"
                                android:text="@string/fat_row_textview"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/fatValue"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/proteinRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left">

                            <TextView
                                android:id="@+id/proteinRowTextString"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="4dp"
                                android:paddingRight="12dp"
                                android:text="@string/protein_textview"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/proteinValue"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/energyRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left">

                            <TextView
                                android:id="@+id/energyRowTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="4dp"
                                android:paddingRight="12dp"
                                android:text="@string/energy_textview"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/energyValue"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/saturatedFatRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left">

                            <TextView
                                android:id="@+id/saturatedFAtTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="4dp"
                                android:paddingRight="12dp"
                                android:text="@string/saturated_fat_textview"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/saturatedFatValue"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/sodiumRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left">

                            <TextView
                                android:id="@+id/sodiumTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="4dp"
                                android:paddingRight="12dp"
                                android:text="@string/sodium_textview"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/sodiumValue"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/saltRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left">

                            <TextView
                                android:id="@+id/saltTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="4dp"
                                android:paddingRight="12dp"
                                android:text="@string/salt_textview"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/saltValue"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/sugarRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left">

                            <TextView
                                android:id="@+id/sugarTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="4dp"
                                android:paddingRight="12dp"
                                android:text="@string/sugar_textview"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/sugarValue"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="right"
                                android:textSize="16sp" />
                        </TableRow>

                    </TableLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>